feat(admin):refactor admin dashboard module
